--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^10.1.0"
+		"firebase": "^10.1.0",
+		"svelte-french-toast": "^1.2.0"
 	}
 }
